samples/_failures_safe/1761468836_df3c25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_282971d1.c:168: error: expected ‘;’, ‘,’ or ‘)’ at end of input
